--- a/application/views/index/about.html
+++ b/application/views/index/about.html
@@ -1,39 +1,50 @@
 ﻿
 <div class="blank"></div>
 <article>
-  <div class="leftbox">
-    <div class="infos">
-      <div class="newsview">
-        <h2 class="intitle">您现在的位置是：<a href="/">网站首页</a>&nbsp;&gt;&nbsp;<a href="/">关于我</a></h2>
-        <div class="news_infos">
-          <p>杨青，女，一个80后草根女站长！09年入行。从搬砖一样的生活方式换成了现在有“单”而居的日子。当然这个单不是单身的单，跟我的职业相比，爱情脱单并不是问题！虽然极尽苛刻的征婚条件但也远不及客户千奇百怪的要求。告别了朝九晚五，躲过了风吹日晒，虽然不再有阶梯式的工资，但是偶尔可以给自己放放假，挽着老公，一起轻装旅行。</p>
-          <p> 人生就是一个得与失的过程，而我却是一个幸运者，得到的永远比失去的多。生活的压力迫使我放弃了轻松的前台接待，放弃了体面的编辑，换来虽有些蓬头垢面的工作，但是我仍然很享受那些熬得只剩下黑眼圈的日子，因为我在学习使用Photoshop、Flash、Dreamweaver、ASP、PHP、JSP...中激发了兴趣，然后越走越远....</p>
-          <p> 喜欢一句话“冥冥中该来则来，无处可逃”。</p>
+    <div class="leftbox">
+        <div class="infos">
+            <div class="newsview">
+                <h2 class="intitle">您现在的位置是：<a href="/">网站首页</a>&nbsp;&gt;&nbsp;<a href="/">关于我</a></h2>
+                <div class="news_infos">
+                    <p>
+                        杨青，女，一个80后草根女站长！09年入行。从搬砖一样的生活方式换成了现在有“单”而居的日子。
+                        当然这个单不是单身的单，跟我的职业相比，爱情脱单并不是问题！虽然极尽苛刻的征婚条件但也远不及客户千奇百怪的要求。
+                        告别了朝九晚五，躲过了风吹日晒，虽然不再有阶梯式的工资，但是偶尔可以给自己放放假，挽着老公，一起轻装旅行。
+                    </p>
+                    <p>
+                        人生就是一个得与失的过程，而我却是一个幸运者，得到的永远比失去的多。
+                        生活的压力迫使我放弃了轻松的前台接待，放弃了体面的编辑，换来虽有些蓬头垢面的工作，但是我仍然很享受那些熬得只剩下黑眼圈的日子，因为我在学习使用
+                        Photoshop、Flash、Dreamweaver、ASP、PHP、JSP...中激发了兴趣，然后越走越远....
+                    </p>
+                    <p> 喜欢一句话“冥冥中该来则来，无处可逃”。</p>
+                </div>
+            </div>
         </div>
-      </div>
+        <div class="news_pl">
+            <h2>我要留言</h2>
+            <ul> </ul>
+        </div>
     </div>
-    <div class="news_pl">
-      <h2>我要留言</h2>
-      <ul>
-      </ul>
+
+    <div class="rightbox">
+        <div class="aboutme">
+            <h2 class="ab_title">关于我</h2>
+            <div class="avatar"> 
+                <img src="/public/images/b04.jpg"> 
+            </div>
+            <div class="ab_con">
+                <p>网名：DanceSmile | 即步非烟</p>
+                <p>职业：Web前端设计师、网页设计 </p>
+                <p>籍贯：四川省—成都市</p>
+                <p>邮箱：dancesmiling@qq.com</p>
+            </div>
+        </div>
+
+        <div class="weixin">
+            <h2 class="ab_title">微信关注</h2>
+            <ul>
+                <img src="/public/images/wx.jpg">
+            </ul>
+        </div>
     </div>
-  </div>
-  <div class="rightbox">
-    <div class="aboutme">
-      <h2 class="ab_title">关于我</h2>
-      <div class="avatar"> <img src="/public/images/b04.jpg"> </div>
-      <div class="ab_con">
-        <p>网名：DanceSmile | 即步非烟</p>
-        <p>职业：Web前端设计师、网页设计 </p>
-        <p>籍贯：四川省—成都市</p>
-        <p>邮箱：dancesmiling@qq.com</p>
-      </div>
-    </div>
-    <div class="weixin">
-      <h2 class="ab_title">微信关注</h2>
-      <ul>
-        <img src="/public/images/wx.jpg">
-      </ul>
-    </div>
-  </div>
 </article>
