--- a/application/views_bak/index/layout/header.html
+++ b/application/views_bak/index/layout/header.html
@@ -20,15 +20,16 @@
 <body>
 <header>
 <div id="mnav">
-    <div class="logo"><a href="/">个人博客</a></div>
+    <div class="logo"><a href="/">左立光的个人博客</a></div>
     <h2 id="mnavh"><span class="navicon"></span></h2>
     <ul id="starlist">
         <li><a href="/">网站首页</a></li>
         <li><a href="/index/about">关于我</a></li>
-        <li><a href="/index/recommend">推荐列表</a></li>
-        <li><a href="/index/list">文章列表</a></li>
-        <li><a href="/index/info">信息</a></li>
-        <li><a href="/index/article">模板内容页</a></li>
+        <li><a href="/index/recommend">推荐</a></li>
+        <li><a href="/index/list">学无止境</a></li>
+        
+        <!-- <li><a href="/index/info">慢生活</a></li> -->
+        <!-- <li><a href="/index/article">模板内容页</a></li> -->
     </ul>
 </div>
 
