--- a/application/views/index/info.html
+++ b/application/views/index/info.html
@@ -51,7 +51,8 @@
 
                 <div class="hide_box" style="display: none;"></div>
 
-                <div class="shang_box" style="display: none;"> <a class="shang_close" href="javascript:void(0)" onclick="dashangToggle()" title="关闭">关闭</a>
+                <div class="shang_box" style="display: none;"> 
+                    <a class="shang_close" href="javascript:void(0)" onclick="dashangToggle()" title="关闭">关闭</a>
                     <div class="shang_tit">
                         <p>感谢您的支持，我会继续努力的!</p>
                     </div>
