--- a/application/views/index/layout/footer.html
+++ b/application/views/index/layout/footer.html
@@ -1,7 +1,7 @@
 
 
     <footer>
-        <p>Design by <a href="/">杨青个人博客</a> <a href="/">蜀ICP备11002373号-1</a></p>
+        <p><a href="/">伽利略个人博客</a> 蜀ICP备11002373号-1</p>
     </footer>
 </body>
 </html>
